Items alignment fixes

--- a/src/client-app/app/connect/qr-code.module.scss
+++ b/src/client-app/app/connect/qr-code.module.scss
@@ -1,6 +1,7 @@
 .Qr {
     border: 1px solid black;
     display: flex;
+    align-self: center;
     
     &, & img {
         border-radius: 6%;
