--- a/src/client-app/app/connect/submit/form.module.scss
+++ b/src/client-app/app/connect/submit/form.module.scss
@@ -12,6 +12,7 @@
 
 .Prompt {
     font-size: 1.2em;
+    text-align: center;
 }
 
 .Error {
